--- a/clase-de-branch/index.html
+++ b/clase-de-branch/index.html
@@ -7,6 +7,7 @@
     <title>Mi primera pagina</title>
 </head>
 <body>
+    <header>Header</header>
     <p>Lorem ipsum ndae nesciunt minus.</p>
 </body>
 </html>
