--- a/clase-de-branch/index.html
+++ b/clase-de-branch/index.html
@@ -9,5 +9,6 @@
 <body>
     <header>Header</header>
     <p>Lorem ipsum ndae nesciunt minus.</p>
+    <section>Se creo un section container</section>
 </body>
 </html>
