--- a/clase-de-branch/index.html
+++ b/clase-de-branch/index.html
@@ -10,5 +10,6 @@
     <header>Header</header>
     <p>Lorem ipsum ndae nesciunt minus.</p>
     <section>Se creo un section container</section>
+    <footer>Footer</footer>
 </body>
 </html>
