Creando Maqueta branch 5 y 10

--- a/clase-de-branch/index.html
+++ b/clase-de-branch/index.html
@@ -7,9 +7,12 @@
     <title>Mi primera pagina</title>
 </head>
 <body>
-    <header>Header</header>
-    <p>Lorem ipsum ndae nesciunt minus.</p>
-    <section>Se creo un section container</section>
-    <footer>Footer</footer>
+<!-- comienza encabezado-->
+<header>
+    <div id="logo"></div>
+    <div id="icono1"></div>
+    <div id="icono2"></div>
+    <div id="icono3"></div>
+</header>
 </body>
 </html>
