--- a/clase-de-branch/index.html
+++ b/clase-de-branch/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Mi primera pagina</title>
 </head>
 <body>
@@ -14,5 +15,43 @@
     <div id="icono2"></div>
     <div id="icono3"></div>
 </header>
+<!--Fin de Encabezado-->
+<!--comienza barra de navegación-->
+<nav>
+    <ul>
+        <li class="botones"></li>
+        <li class="botones"></li>
+        <li class="botones"></li>
+        <li class="botones"></li>
+    </ul>
+</nav>
+<!--Fin barra de navegación-->
+
+<!--Comienza Sección Top-->
+
+<div id="top">
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
+
+<!--Fin Sección Top-->
+
+<!--Inicia Sección Principal-->
+
+<section>
+    <aside id="izq"></aside>
+    <article></article>
+    <aside id="der"></aside>
+</section>
+
+<!--Fin Sección Principal-->
+
+<!--Inicia Footer-->
+<footer></footer>
+
+<!--Fin Footer-->
 </body>
 </html>
